fixed navbar issue on mobile

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -125,3 +125,103 @@
     padding: 0.5rem 0;
   }
 }
+
+@media (max-width: 624px) {
+  .navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: transparent;
+  padding: 1rem !important;
+  width: 100%;
+  border-bottom: 1px solid #b1adad;
+  color: #fff;
+}
+.menu {
+  list-style: none;
+  display: flex;
+  gap: 10px;
+  font-size: 15px;
+}
+
+.applyBtn {
+  border: 2px solid white;
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-size: 13px;
+
+}
+.logo img {
+  width: 35px;
+  height: 35px;
+}
+}
+
+
+@media (max-width: 500px) {
+  
+.menu {
+  gap: 7px;
+  font-size: 13px;
+}
+
+.applyBtn {
+  font-size: 10px;
+
+}
+.logo img {
+  width: 28px;
+  height: 28px;
+}
+}
+
+@media (max-width: 400px) {
+ 
+.menu {
+  gap: 5px;
+  font-size: 10px;
+}
+
+.applyBtn {
+  padding: 3px 5px ;
+  font-size: 8px;
+
+}
+.logo img {
+  width: 25px;
+  height: 25px;
+}
+}
+
+@media (max-width: 315px) {
+ 
+.menu {
+  gap: 2px;
+  font-size: 9px;
+}
+
+.applyBtn {
+  font-size: 8px;
+
+}
+.logo img {
+  width: 20px;
+  height: 20px;
+}
+}
+@media (max-width: 283px) {
+ 
+.menu {
+  gap: 2px;
+  font-size: 8px;
+}
+
+.applyBtn {
+  font-size: 6px;
+
+}
+.logo img {
+  width: 17px;
+  height: 17px;
+}
+}
